fixed yelp modal width on mobile.

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@
   
   
  #yelp-modal {
-    width: 80%;
+    width: 100%;
     height: 80%;
     border: 10px;
     justify-content: center;
